// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component renders TodoApp correctly with no todos 1`] = `
<div>
  <AddTodo
    handleAddTodo={[Function]}
  />
  <TodoList
    handleTodos={[Function]}
    todos={Array []}
  />
  <p>
    Show:
     
    <FilterLink
      currentFilter="SHOW_ALL"
      filter="SHOW_ALL"
    >
      All
    </FilterLink>
    <FilterLink
      currentFilter="SHOW_ALL"
      filter="SHOW_ACTIVE"
    >
      Active
    </FilterLink>
    <FilterLink
      currentFilter="SHOW_ALL"
      filter="SHOW_COMPLETED"
    >
      Completed
    </FilterLink>
  </p>
</div>
`;

exports[`App component renders TodoApp correctly with saved todos 1`] = `
<div>
  <AddTodo
    handleAddTodo={[Function]}
  />
  <TodoList
    handleTodos={[Function]}
    todos={
      Array [
        Object {
          "completed": false,
          "id": 0,
          "text": "Learn Redux",
        },
        Object {
          "completed": false,
          "id": 1,
          "text": "Master Redux",
        },
      ]
    }
  />
  <p>
    Show:
     
    <FilterLink
      currentFilter="SHOW_ALL"
      filter="SHOW_ALL"
    >
      All
    </FilterLink>
    <FilterLink
      currentFilter="SHOW_ALL"
      filter="SHOW_ACTIVE"
    >
      Active
    </FilterLink>
    <FilterLink
      currentFilter="SHOW_ALL"
      filter="SHOW_COMPLETED"
    >
      Completed
    </FilterLink>
  </p>
</div>
`;
